# ChessBot

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: board.cpp  board.h  evaluation.cpp  evaluation.h  mailbox.h  main.cpp  movegen.cpp  movegen.h  search.cpp  search.h  types.h
web/: chess.js  index.html  server.py  test_perft.js
webapp/: README.md  chess.js  coach.js  engine.js  index.html  netlify.toml
webapp/netlify/functions/: coach.js
